--- a/web-frontend/src/assets/main.css
+++ b/web-frontend/src/assets/main.css
@@ -1,1 +1,14 @@
 @import './base.css';
+/* ./src/index.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+button {
+    @apply bg-blue-500 px-6 py-1 rounded-xl text-white font-semibold;
+}
+
+button:hover {
+    @apply bg-blue-400 ;
+}
