--- a/web-frontend/src/assets/main.css
+++ b/web-frontend/src/assets/main.css
@@ -40,9 +40,9 @@ body {
 
 
 button {
-    @apply bg-blue-500 px-6 py-1 rounded-xl text-white font-semibold;
+    @apply bg-green-700 px-6 py-1 rounded-xl text-white font-semibold;
 }
 
 button:hover {
-    @apply bg-blue-400 ;
+    @apply bg-green-500 ;
 }
