--- a/web-frontend/src/assets/main.css
+++ b/web-frontend/src/assets/main.css
@@ -40,9 +40,9 @@ body {
 
 
 button {
-    @apply bg-green-700 px-6 py-1 rounded-xl text-white font-semibold;
+    @apply bg-gradient-to-b from-green-600 to-green-800 px-6 py-1 rounded-xl text-white font-semibold;
 }
 
 button:hover {
-    @apply bg-green-500 ;
+    @apply bg-gradient-to-b from-green-400 to-green-600 ;
 }
